modif lien actualité

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#" class="hover-link">La carte</a></li>
                 <li><a href="#" class="hover-link">Titi story</a></li>
                 <li><a href="#" class="hover-link">Le resto</a></li>
-                <li><a href="/actualite/actualite.html" class="hover-link">Actualité</a></li>
+                <li><a href="actualite/actualite.html" class="hover-link">Actualité</a></li>
                 <li><a href="#" target="_blank" class="bouton-lien zoom-menu">Fais ton burger</a></li>
             </ul>
     </header>
