modif lien actualité

--- a/actualite/actualite.html
+++ b/actualite/actualite.html
@@ -16,7 +16,7 @@
     <body class="police-inter">
 
     <header class="container">
-        <a href="/html/certif/index.html" class="hover-link"><img class="logo" src="images/icone_titi.png"></a>
+        <a href="/projet-titiBurger/index.html" class="hover-link"><img class="logo" src="images/icone_titi.png"></a>
         <nav class="menu">
             <ul class="ul">
                 <li class="li"><a href="#" class="hover-link">La carte</a></li>
